<resources>
    <!-- Activities -->
    <string name="app_name">Hypechat</string>
    <string name="title_activity_chat">Hypechat</string>
    <string name="new_organization_title">Nueva Organización</string>
    <string name="new_channel_title">Nuevo Canal</string>

    <!-- Menu -->
    <string name="navigation_drawer_open">Abrir Menu</string>
    <string name="navigation_drawer_close">Cerrar Menu</string>
    <string name="menu_channels">CANALES</string>
    <string name="menu_conversations">CONVERSACIONES</string>
    <string name="action_log_out">Cerrar Sesión</string>

    <!-- Welcome activity -->
    <string name="app_welcome">Bienvenido a Hypechat.\nPara empezar a chatear, crea una nueva organización o revisa las invitaciones recibidas.</string>
    <string name="create_organization">Crear Organización</string>
    <string name="show_invitations">Ver Invitaciones</string>

    <!-- organization creation view -->
    <string name="hint_organization_name">Nombre de la organización</string>
    <string name="hint_organization_description">Descripción</string>
    <string name="organization_welcome_message_hint">Mensaje de Bienvenida</string>
    <string name="organization_location_label_text">Ubicación:</string>
    <string name="new_organization_next_text">SIGUIENTE</string>
    <string name="new_organization_end_text">FINALIZAR</string>

    <!-- channel creation view -->
    <string name="channel_description">Los canales son el lugar donde se comunican los miembros de la organización</string>
    <string name="btn_channel_create">Crear canal</string>
    <string name="input_channel_name_error">Ingrese el nombre del canal</string>
    <string name="input_channel_description_error">Ingrese la descripción del canal</string>
    <string name="input_channel_welcome_error">Ingrese el mensaje de bienvenida</string>
    <string name="channel_name_hint">Nombre</string>
    <string name="channel_description_hint">Descripción</string>
    <string name="channel_welcome_hint">Mensaje de bienvenida</string>
    <string name="hint_regards_channel">Saluda a los invitados! ┌( ಠ_ಠ )┘</string>
    <string name="hint_about_channel">¿De qué trata este canal?</string>
    <string name="hint_example_channel_name">Ej: #clientes</string>
    <string name="channel_privacy_open">Abierto</string>
    <string name="channel_privacy_closed">Cerrado</string>
    <string name="title_channel_edit">Editar canal</string>
    <string name="channel_edit">Editar</string>

    <!-- conversations creation view -->
    <string name="no_conversations_msg">No hay usuarios con quien conversar… Enviá invitaciones para agregar a tus colegas y amigos!</string>
    <string name="new_conversation_title">Nueva Conversación</string>
    <string name="conversations_description">Elegí un usuario para chatear</string>

    <!-- chat view -->
    <string name="new_message_text_hint">Enviá algo bueno al chat!</string>
    <string name="new_message_code_hint">Compartí tu código!</string>
    <string name="download_message_file">Ver archivo enviado</string>
    <string name="no_channel_msg">Unite a un canal o creá uno nuevo para poder chatear.</string>

    <!-- user profile view -->
    <string name="user_profile_title">Editar usuario</string>
    <string name="update_user_profile_button">Actualizar\nPerfil</string>
    <string name="name_user_profile">Nombre: </string>
    <string name="username_user_profile">Usuario: </string>
    <string name="email_user_profile">Email: </string>
    <string name="btn_update_user">Actualizar</string>
    <string name="input_username_error">Ingrese un nombre de usuario</string>
    <string name="input_name_error">Ingrese un nombre</string>
    <string name="error_username_exists">El nombre de usuario ya existe o contiene espacios</string>

    <!-- organization profile view -->
    <string name="organization_profile_title">Perfil de la organización</string>
    <string name="description_organization_profile">Descripción</string>
    <string name="welcome_organization_profile">Mensaje de bienvenida</string>
    <string name="organization_users_list_title">Usuarios de la organización</string>
    <string name="channel_list_title">Lista de Canales</string>

    <!-- login and register view -->
    <string name="facebook_app_id">318283042209713</string>
    <string name="fb_login_protocol_scheme">fb318283042209713</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="register_name">Nombre completo</string>
    <string name="fb_log_in_error">No se pudo iniciar sesión con Facebook</string>
    <string name="log_in_error">Email o contraseña incorrectos</string>
    <string name="error_register">El nombre de usuario ya existe</string>
    <string name="error_register_firebase">El email ya existe o es inválido</string>
    <string name="error_weak_password">Contraseña muy corta [mínimo 6 caracteres]</string>
    <string name="error_user_exists">Email ya utilizado en otra cuenta</string>
    <string name="error_login_connection">No fue posible iniciar sesión. Intente más tarde.</string>
    <string name="error_register_connection">No fue posible registarse. Intente más tarde.</string>
    <string name="register_username">Usuario</string>
    <string name="error_invalid_email">El mail es inválido</string>

    <!-- Invitations -->
    <string name="send_invitations_button">Enviar</string>
    <string name="email_invitation_text_hint">Añadir otro email</string>
    <string name="send_invitations_label">Invitar usuarios</string>
    <string name="send_invitations">Enviar invitaciones</string>
    <string name="received_invitations">Invitaciones recibidas</string>
    <string name="received_invitations_label">Invitaciones Recibidas</string>
    <string name="received_invitations_menu_label">Invitaciones Recibidas</string>
    <string name="received_invitation_text">La organización &lt;b>%1$s&lt;/b> desea que te unas a su equipo. ¿Aceptas?</string>
    <string name="send_invitations_error_message">Hubo un problema para enviar invitaciones a los siguientes correos. Asegurate que los correos pertenezcan a usuarios de Hypechat y que no pertenezcan actualmente a la organización.</string>
    <string name="received_invitation_empty_message">No hay más invitaciones pendientes.</string>

    <!-- password recovery -->
    <string name="input_email_recovery">Ingrese su email para reiniciar la contraseña:</string>
    <string name="send_email_recovery">Enviar correo</string>
    <string name="invalid_email_recovery">El email ingresado no existe</string>
    <string name="email_sent_to">Se envió un correo a:</string>
    <string name="wrong_format">Formato inválido</string>

    <!-- Other -->
    <string name="image_picker_error">Debe seleccionar una imagen!</string>
    <string name="fail_getting_info">No se pudo obtener toda la información</string>
    <string name="update_location_menu_label">Actualizar Ubicación</string>

    <!-- Public channels -->
    <string name="public_channels_label">Canales Públicos</string>
    <string name="public_channels_empty_message">No hay canales públicos en esta Organización a los que no pertenezcas</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Escribe el nombre</string>

    <!-- Channel profile -->
    <string name="channel_profile_title">Información del canal</string>
    <string name="channel_users_list_title">Usuarios del canal</string>
    <string name="channel_new_users_list_title">Agregar usuarios al canal</string>


</resources>
