<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/organization_profile"
        android:orderInCategory="100"
        android:title="@string/organization_profile_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/send_invitations"
        android:orderInCategory="100"
        android:title="@string/send_invitations"
        app:showAsAction="never" />

    <item
        android:id="@+id/received_invitations"
        android:orderInCategory="100"
        android:title="@string/received_invitations_menu_label"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_log_out"
        android:orderInCategory="101"
        android:title="@string/action_log_out"
        app:showAsAction="never" />

</menu>
