<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activities.ChannelChatActivity"
    tools:showIn="@layout/app_bar_main">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/organization_welcome_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/organization_welcome_message_hint"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/organization_welcome_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:gravity="top|left"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/organization_location_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/organization_location_label_text"
        android:textSize="16sp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/organization_welcome_input_layout"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/pick_location_image_button"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/baseline_add_location_white_48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/organization_location_label"
        android:gravity="center"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/new_organization_end_button"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_organization_end_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>